[gd_scene load_steps=7 format=3 uid="uid://t53mcf26psgk"]

[ext_resource type="Theme" uid="uid://7vsyfmueweyk" path="res://theme/main_theme.tres" id="1_47wts"]
[ext_resource type="Texture2D" uid="uid://dmbs5yixlkk6k" path="res://assets/sprites/basic_goblin_portrait.png" id="1_iqtj5"]
[ext_resource type="Script" path="res://goblin_portrait.gd" id="3_yq0s1"]
[ext_resource type="Texture2D" uid="uid://ujsr5t1exqgd" path="res://assets/sprites/barrel_goblin_portrait.png" id="4_gk82b"]
[ext_resource type="Texture2D" uid="uid://b3yt6dhysv3ur" path="res://assets/sprites/small_red_arrow.png" id="5_7dxub"]
[ext_resource type="FontFile" uid="uid://dydewm6ijd4sc" path="res://assets/RubikMonoOne-Regular.ttf" id="5_lphc7"]

[node name="GoblinPortrait" type="MarginContainer"]
offset_right = 79.0
offset_bottom = 114.0
size_flags_vertical = 0
theme = ExtResource("1_47wts")
script = ExtResource("3_yq0s1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 71.0
offset_bottom = 106.0

[node name="BasicPortrait" type="TextureRect" parent="VBoxContainer"]
offset_right = 63.0
offset_bottom = 76.0
texture = ExtResource("1_iqtj5")
stretch_mode = 2

[node name="BarrelPortrait" type="TextureRect" parent="VBoxContainer"]
visible = false
offset_right = 63.0
offset_bottom = 90.0
texture = ExtResource("4_gk82b")
stretch_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 18)
offset_top = 80.0
offset_right = 63.0
offset_bottom = 98.0
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_font_sizes/font_size = 12
text = "Gobbo McGobbo"
horizontal_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="HPLabel" type="Label" parent="."]
offset_left = 32.0
offset_top = 8.0
offset_right = 71.0
offset_bottom = 38.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 4
theme_override_fonts/font = ExtResource("5_lphc7")
theme_override_font_sizes/font_size = 18
text = "15"

[node name="Arrow" type="Node2D" parent="."]
position = Vector2(38, 49)
rotation = 0.0558505

[node name="ArrowSprite" type="Sprite2D" parent="Arrow"]
position = Vector2(37, 0)
rotation = 1.5708
texture = ExtResource("5_7dxub")
